--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,6 @@
 image_wall_api:
     resource: "@ImageWallApiBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /api
 
 image_wall_core:
     resource: "@ImageWallCoreBundle/Resources/config/routing.yml"
@@ -9,7 +9,3 @@ image_wall_core:
 image_wall_web:
     resource: "@ImageWallWebBundle/Resources/config/routing.yml"
     prefix:   /
-
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
