Install dev requirements. Ignore unneeded files. Configure PHPUnit

--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,23 @@
 /var/*
 !/var/cache
 /var/cache/*
+!var/cache/.gitkeep
 !/app/cache
 /app/cache/*
-!var/cache/.gitkeep
+!app/cache/.gitkeep
 /var/dump
 !/var/logs
 /var/logs/*
 !var/logs/.gitkeep
+!/app/logs
+/app/logs/*
+!app/logs/.gitkeep
 !/var/sessions
 /var/sessions/*
 !var/sessions/.gitkeep
+!/app/sessions
+/app/sessions/*
+!app/sessions/.gitkeep
 !var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
